downloaded_docs/lightweight-charts/docs/3.8/api/interfaces/SeriesDataItemTypeMap.md
Version: 3.8

On this page

Represents the type of data that a series contains.

For example a bar series contains [BarData](/lightweight-charts/docs/3.8/api/interfaces/BarData) or [WhitespaceData](/lightweight-charts/docs/3.8/api/interfaces/WhitespaceData).

## Properties[​](#properties "Direct link to Properties")

### Bar[​](#bar "Direct link to Bar")

> **Bar**: [`BarData`](/lightweight-charts/docs/3.8/api/interfaces/BarData) | [`WhitespaceData`](/lightweight-charts/docs/3.8/api/interfaces/WhitespaceData)

The types of bar series data.

---

### Candlestick[​](#candlestick "Direct link to Candlestick")

> **Candlestick**: [`CandlestickData`](/lightweight-charts/docs/3.8/api/interfaces/CandlestickData) | [`WhitespaceData`](/lightweight-charts/docs/3.8/api/interfaces/WhitespaceData)

The types of candlestick series data.

---

### Area[​](#area "Direct link to Area")

> **Area**: [`SingleValueData`](/lightweight-charts/docs/3.8/api/interfaces/SingleValueData) | [`WhitespaceData`](/lightweight-charts/docs/3.8/api/interfaces/WhitespaceData)

The types of area series data.

---

### Baseline[​](#baseline "Direct link to Baseline")

> **Baseline**: [`SingleValueData`](/lightweight-charts/docs/3.8/api/interfaces/SingleValueData) | [`WhitespaceData`](/lightweight-charts/docs/3.8/api/interfaces/WhitespaceData)

The types of baseline series data.

---

### Line[​](#line "Direct link to Line")

> **Line**: [`LineData`](/lightweight-charts/docs/3.8/api/interfaces/LineData) | [`WhitespaceData`](/lightweight-charts/docs/3.8/api/interfaces/WhitespaceData)

The types of line series data.

---

### Histogram[​](#histogram "Direct link to Histogram")

> **Histogram**: [`HistogramData`](/lightweight-charts/docs/3.8/api/interfaces/HistogramData) | [`WhitespaceData`](/lightweight-charts/docs/3.8/api/interfaces/WhitespaceData)

The types of histogram series data.